fix: Enable CORS with permissive configuration
- Re-enable CORS (was previously disabled)
- Allow all origin patterns (*) for development
- Keep credentials support enabled
- This fixes CORS and 403 errors on frontend requests